Apps/local-speedtest/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: local-speedtest
  name: local-speedtest-service
  namespace: local-speedtest
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 3000
  selector:
    app: local-speedtest
