Apps/local-speedtest/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: local-speedtest-ingress
  labels:
    app: local-speedtest
  namespace: local-speedtest
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"  # Use cert-manager for TLS
    nginx.ingress.kubernetes.io/rewrite-target: /        # Rewrite all paths to root
    nginx.ingress.kubernetes.io/proxy-body-size: "0"    # Increase max upload size
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - local-speedtest.dassidias.com
    secretName: local-speedtest-tls  # Secret where TLS cert will be stored
  rules:
  - host: local-speedtest.dassidias.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: local-speedtest-service  # Route to this service
            port:
              number: 80                 # Service port to route to
---
